--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,9 @@
-/*-----------------------------------*\
-  #style.css
-\*-----------------------------------*/
-
-/**
- * copyright 2022 @codewithsadee
- */
-
-/*-----------------------------------*\
-  #CUSTOM PROPERTY
-\*-----------------------------------*/
-
 :root {
   /**
    * colors
    */
 
   /* gradient */
-
   --bg-gradient-onyx: linear-gradient(
     to bottom right,
     hsl(240, 1%, 25%) 3%,
@@ -51,7 +38,6 @@
   );
 
   /* solid */
-
   --jet: hsl(0, 0%, 22%);
   --onyx: hsl(240, 1%, 17%);
   --eerie-black-1: hsl(240, 2%, 13%);
@@ -122,9 +108,9 @@ a {
   text-decoration: none;
 }
 
-li {
+/* li {
   list-style: none;
-}
+} */
 
 img,
 ion-icon,
@@ -180,6 +166,14 @@ body {
   margin-bottom: 12px;
 }
 
+.mb-12 {
+  margin-bottom: 12px;
+}
+
+.mb-8 {
+  margin-bottom: 8px;
+}
+
 /*-----------------------------------*\
   #REUSED STYLE
 \*-----------------------------------*/
@@ -214,6 +208,28 @@ article {
   color: var(--orange-yellow-crayola);
   box-shadow: var(--shadow-1);
   z-index: 1;
+}
+
+.icon-box-cv {
+  cursor: pointer;
+  padding: 12px;
+  background: var(--bg-gradient-onyx);
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  font-size: 16px;
+  color: var(--orange-yellow-crayola);
+  box-shadow: var(--shadow-1);
+  z-index: 1;
+  font-weight: 400;
+}
+
+.icon-box-cv:hover {
+  filter: brightness(120%);
 }
 
 .icon-box::before {
@@ -468,6 +484,7 @@ main {
 }
 
 .social-list {
+  list-style-type: none;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -503,6 +520,7 @@ main {
 }
 
 .navbar-list {
+  list-style-type: none;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -615,8 +633,8 @@ main {
   margin-bottom: 30px;
 }
 
-.testimonials-title {
-  margin-bottom: 20px;
+.project-title {
+  margin-bottom: 8px;
 }
 
 .testimonials-list {
@@ -633,12 +651,12 @@ main {
   scroll-snap-type: inline mandatory;
 }
 
-.testimonials-item {
+.project-item {
   min-width: 100%;
   scroll-snap-align: center;
 }
 
-.testimonials-avatar-box {
+.project-avatar-box {
   position: absolute;
   top: 0;
   left: 0;
@@ -648,24 +666,12 @@ main {
   box-shadow: var(--shadow-1);
 }
 
-.testimonials-item-title {
+.project-item-title {
   margin-bottom: 7px;
 }
 
-.testimonials-text {
-  color: var(--light-gray);
-  font-size: var(--fs-6);
-  font-weight: var(--fw-300);
-  line-height: 1.6;
-  display: -webkit-box;
-  line-clamp: 4;
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-}
-
 /**
- * #testimonials-modal
+ * #projects-modal
  */
 
 .modal-container {
@@ -713,7 +719,8 @@ main {
   pointer-events: all;
 }
 
-.testimonials-modal {
+.projects-modal {
+  overflow: hidden;
   background: var(--eerie-black-2);
   position: relative;
   padding: 15px;
@@ -727,7 +734,7 @@ main {
   z-index: 2;
 }
 
-.modal-container.active .testimonials-modal {
+.modal-container.active .projects-modal {
   transform: scale(1);
   opacity: 1;
 }
@@ -757,20 +764,36 @@ main {
   --ionicon-stroke-width: 50px;
 }
 
-.modal-avatar-box {
-  background: var(--bg-gradient-onyx);
-  width: max-content;
-  border-radius: 14px;
-  margin-bottom: 15px;
-  box-shadow: var(--shadow-2);
-}
-
-.modal-img-wrapper > img {
-  display: none;
-}
-
 .modal-title {
-  margin-bottom: 4px;
+  margin-bottom: 20px;
+}
+
+.modal-text,
+.modal-text input {
+  color: var(--white-2);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-300);
+  line-height: 1.6;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  border: none;
+}
+
+.modal-text ul {
+  list-style-position: inside;
+}
+
+.modal-text li:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.modal-text form {
+  display: inline-block;
+}
+
+.modal-text input {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .modal-content time {
@@ -849,6 +872,7 @@ main {
 }
 
 .timeline-list {
+  list-style-type: none;
   font-size: var(--fs-6);
   margin-left: 45px;
 }
@@ -903,16 +927,10 @@ main {
 }
 
 .timeline-text-link {
-  margin: 4px 0;
   display: inline-block;
-  background: var(--text-gradient-yellow);
-  padding: 4px;
-  border-radius: 4px;
   cursor: pointer;
-  color: #000000;
-  font-weight: bold;
-  filter: brightness(90%);
-  box-shadow: var(--shadow-1);
+  color: var(--white-2);
+  text-decoration: underline;
 }
 
 /**
@@ -947,7 +965,7 @@ main {
 }
 
 .skills-item:not(:last-child) {
-  margin-bottom: 6px;
+  margin-bottom: 4px;
 }
 
 .skill .title-wrapper {
@@ -1602,34 +1620,13 @@ textarea.form-input::-webkit-resizer {
     padding: 20px;
   }
 
-  .testimonials-modal {
+  .projects-modal {
     display: flex;
     justify-content: flex-start;
     align-items: stretch;
     gap: 25px;
-    padding: 30px;
+    padding: 32px;
     border-radius: 20px;
-  }
-
-  .modal-img-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .modal-avatar-box {
-    border-radius: 18px;
-    margin-bottom: 0;
-  }
-
-  .modal-avatar-box img {
-    width: 65px;
-  }
-
-  .modal-img-wrapper > img {
-    display: block;
-    flex-grow: 1;
-    width: 35px;
   }
 
   /* clients */
@@ -1664,7 +1661,7 @@ textarea.form-input::-webkit-resizer {
   }
 
   .skills-item:not(:last-child) {
-    margin-bottom: 6px;
+    margin-bottom: 4px;
   }
 
   /**
@@ -1757,13 +1754,9 @@ textarea.form-input::-webkit-resizer {
 
   /* testimonials modal */
 
-  .testimonials-modal {
+  .projects-modal {
     gap: 35px;
     max-width: 680px;
-  }
-
-  .modal-avatar-box img {
-    width: 80px;
   }
 
   /**
@@ -1779,6 +1772,7 @@ textarea.form-input::-webkit-resizer {
   }
 
   .filter-list {
+    list-style-type: none;
     display: flex;
     justify-content: flex-start;
     align-items: center;
